<resources>
    <string name="app_name">List Produk</string>
    <string name="welcome">WELCOME</string>
    <string name="login_in">LOGIN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="or_login_social">OR LOGIN USING SOCIAL MEDIA</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="belum_punya_akun">Belum punya akun? Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun? Login</string>
    <string name="tampilkan_password">Tampilkan Password</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="cari_produk">Cari produk...</string>
    <string name="tidak_ada_produk">Tidak ada produk ditemukan</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="kembali">Kembali</string>
    <string name="back">Back</string>
</resources>