<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:scaleType="fitCenter"
                android:padding="8dp" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daftar_produk"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageProfileLogo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/img"
                android:contentDescription="@string/profile"
                android:scaleType="fitCenter"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:adjustViewBounds="true" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/cari_produk"
        android:background="@drawable/bg_search"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="12dp"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_produk"
        android:textColor="@color/gray_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProduk"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
